# Unitree-Go2-ROS2-Ignition-Rviz2

./: .gitignore  README _zh.md  README.md  unitree_ros2_setup.sh
src/go2_ign_description/: CMakeLists.txt  package.xml
src/go2_ign_description/launch/: go2_gazebo.launch.py  go2_rviz.launch.py
src/go2_ign_description/models/xacro/: gazebo.xacro  leg.xacro  robot.xacro
src/go2_ign_description/rviz/: joint_state.rviz
